# minir

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
minir/: __init__.py  __main__.py  bytecode.py  ir.py  ir_new.py  llvm_writer.py  mlir_writer.py  onnx.py  onnx_to_tosa.py  onnx_utils.py  onnx_writer.py  rewrite.py  tosa_writer.py  utils.py  writer.py
tests/: test_bytecode.py  test_ir.py  test_onnx.py  test_onnx_writer.py  test_rewrite.py  test_writer.py
