[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minir"
version = "0.1.2"
description = "A minimal implementation of an intermediate representation"
dependencies = [
    "numpy",
    "onnx",
    "onnxsim",
    "onnxruntime",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minir*"]

[project.optional-dependencies]
dev = ["pytest"]
