[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minir"
dynamic = ["version"]
description = "A minimal implementation of an intermediate representation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sinjin Jeong", email = "sjjeong94@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "onnx",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minir*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "minir.__version__"}
